crates/karva/tests/it/snapshots/it__result_report__expected_failures_remain_distinct_in_reports_and_cache-2.snap
---
source: crates/karva/tests/it/result_report.rs
expression: "context.read_file(\"reports/results.json\")"
---
{
  "schema_version": 2,
  "status": "passed",
  "elapsed_seconds": "[TIME]",
  "stats": {
    "total": 1,
    "passed": 0,
    "failed": 0,
    "errors": 0,
    "skipped": 0,
    "expected_failure": 1,
    "flaky": 0,
    "slow": 0
  },
  "tests": [
    {
      "module": "test_expected",
      "name": "test_expected",
      "full_name": "test_expected::test_expected",
      "status": "expected_failure",
      "duration_seconds": "[TIME]",
      "expected_failure_reason": "Known parser bug"
    }
  ]
}
