crates/karva/tests/it/snapshots/it__result_report__expected_failures_remain_distinct_in_reports_and_cache.snap
---
source: crates/karva/tests/it/result_report.rs
info:
  program: karva
  args:
    - test
    - "--no-parallel"
    - "--result-output=reports/results.json"
    - "--retry=1"
  env:
    VIRTUAL_ENV: /Users/matthew/Library/Caches/karva/test-cache/shared-venv-py3.13-1791048713
---
success: true
exit_code: 0
----- stdout -----
    Starting 1 test across 1 worker
        PASS [TIME] test_expected::test_expected
────────────
     Summary [TIME] 1 test run: 1 passed, 0 skipped

----- stderr -----
